2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 4
	* version.c.in: update

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03365] ~/.netrc support
	* etc.c (add_auth_pass_entry): add netrc arg
			add new entry to tail
		(find_auth_pass_entry): ent->host == NULL is "default"
		(loadPasswd): rewrite with next_token, parsePasswd, 
				openPasswdFile
				load ~/.netrc
		(next_token): added
		(parsePasswd): added
		(openPasswdFile): added
	* ftp.c (openFTP): use find_auth_user_passwd
	* NEWS: ~/.netrc

2002-10-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03363] refresh download
	* file.c (HTMLtagproc1): alarm is implicit once
	* fm.h (AL_IMPLICIT_ONCE): added
	* main.c (searchKeyData): reset CurrentKeyData, CurrentCmdData
		(SigAlarm): CurrentCmdData is saved to data
			message displayed on AL_EXPLICIT
			clear alarm when AL_IMPLICIT_ONCE
		(setAlarmEvent): AL_IMPLICIT_ONCE

2002-10-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03362] Re: support for http://user:pass@www.url.com
	* etc.c (loadPasswd): accept host, passwd

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03359] support for http://user:pass@www.url.com
	* etc.c (find_auth_user_passwd): use ParsedURL for args
		use user and passwd if these are defined in ParsedURL
	* file.c (getAuthCookie): change find_auth_user_passwd()
	* proto.h (find_auth_user_passwd): change prototype
	* NOTE: http://user:pass@www.url.com is NOT RECOMMENDED
		for security reasons.

2002-10-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03357] tab in <pre> in <ul>,<ol>,...
	* file.c (HTMLlineproc2): check indent for tabstop

2002-10-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03354] display current line number
	* display.c (displayBuffer): %3d -> %d

2002-10-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 3
	* version.c.in: update

2002-10-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
